--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@syncfusion/ej2-angular-diagrams": "^17.4.50",
+    "@syncfusion/ej2-angular-navigations": "^19.2.48",
     "core-js": "^2.5.4",
     "json-server": "^0.16.0",
     "rxjs": "~6.3.3",
